@@ -1,64 +1,65 @@
 package Communication;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
-import java.util.List;
 import com.google.gson.Gson;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
 
-/**
- * アプリケーションサーバ（ゲームサーバ）との通信を担当するクラス
- * マッチング成立時などに、ゲームサーバへ通知を送ります。
- */
 public class ApplicationServerCommunication {
 
-    private static final String APP_SERVER_URL = "http://localhost:8081/api/match";
+    // APサーバの登録用URL (RunGameServerの設定に合わせてポート8081)
+    private static final String AP_SERVER_URL = "http://localhost:8081/GameServer/players/register";
+    private final Gson gson = new Gson();
 
-    private Gson gson = new Gson();
-
-    // --- 送信データの構造 (JSON変換用) ---
-    // ゲームサーバが受け取る形に合わせて調整してください
-    private static class MatchRequest {
-        String type = "START_GAME";
-        List<String> playerIds; // マッチングしたユーザIDリスト
-
-        MatchRequest(List<String> ids) {
-            this.playerIds = ids;
-        }
+    // APサーバに合わせて送るデータ構造
+    private static class PlayerInfoDto {
+        String name;
+        PlayerInfoDto(String name) { this.name = name; }
     }
 
     /**
-     * アプリケーションサーバにマッチング成立を通知する
-     * @param userIds ゲームに参加するユーザIDのリスト
+     * マッチング成立したユーザリストをAPサーバへ通知する
+     * @param userIds 成立したユーザIDのリスト
+     * @return 送信成功ならtrue
      */
-    public void notifyMatchingRequest(List<String> userIds) {
-        // 1. 送信データをJSON文字列に変換
-        MatchRequest req = new MatchRequest(userIds);
-        String jsonBody = gson.toJson(req);
+    public boolean notifyMatchingRequest(List<String> userIds) {
+        System.out.println("[AppServerComm] Sending players to AP Server: " + userIds);
 
-        // 2. HTTPクライアント作成 (Java 11以降の標準機能)
-        HttpClient client = HttpClient.newHttpClient();
+        try {
+            // 1. データ変換 (Stringリスト -> PlayerInfoDtoのリスト)
+            List<PlayerInfoDto> dtos = new ArrayList<>();
+            for (String id : userIds) {
+                dtos.add(new PlayerInfoDto(id));
+            }
+            String jsonBody = gson.toJson(dtos);
 
-        // 3. リクエスト作成 (POSTメソッド)
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(APP_SERVER_URL)) // URL指定
-                .timeout(Duration.ofSeconds(5))  // タイムアウト設定(5秒)
-                .header("Content-Type", "application/json") // JSONを送ると宣言
-                .POST(HttpRequest.BodyPublishers.ofString(jsonBody)) // データをセット
-                .build();
+            // 2. HTTP接続設定
+            URL url = new URL(AP_SERVER_URL);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("POST");
+            conn.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+            conn.setDoOutput(true); // ボディ送信有効化
 
-        // 4. 非同期で送信（結果を待たずに処理を戻す）
-        client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                .thenAccept(response -> {
-                    // 送信成功時の処理
-                    System.out.println("AppServerへの通知完了: ステータスコード " + response.statusCode());
-                })
-                .exceptionally(e -> {
-                    // 送信失敗時の処理
-                    System.err.println("AppServerへの通知失敗: " + e.getMessage());
-                    return null;
-                });
+            // 3. 送信
+            try (OutputStream os = conn.getOutputStream()) {
+                byte[] input = jsonBody.getBytes(StandardCharsets.UTF_8);
+                os.write(input, 0, input.length);
+            }
+
+            // 4. 結果確認
+            int responseCode = conn.getResponseCode();
+            System.out.println("[AppServerComm] Response Code: " + responseCode);
+
+            // 204 No Content (成功) または 200 OK
+            return (responseCode >= 200 && responseCode < 300);
+
+        } catch (Exception e) {
+            System.err.println("[AppServerComm] Error sending request: " + e.getMessage());
+            e.printStackTrace();
+            return false;
+        }
     }
 }
